# ChristmasCountdown_12day_v1

./: GUIPlan.txt  README.md  backupCode.txt
ChristmasCountdownTime_v1/: CMakeLists.txt  main.cpp
ChristmasCountdown_V1/: CMakeLists.txt  day10window.cpp  day10window.h  day10window.ui  day11window.cpp  day11window.h  day11window.ui  day12window.cpp  day12window.h  day12window.ui  day1window.cpp  day1window.h  day1window.ui  day2window.cpp  day2window.h  day2window.ui  day3window.cpp  day3window.h  day3window.ui  day4window.cpp  day4window.h  day4window.ui  day5window.cpp  day5window.h  day5window.ui  day6window.cpp  day6window.h  day6window.ui  day7window.cpp  day7window.h  day7window.ui  day8window.cpp  day8window.h  day8window.ui  day9window.cpp  day9window.h  day9window.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
ChristmasCountdown_v1/: ChristmasCountdown_v1.pro  day1window.cpp  day1window.h  day1window.ui  day2window.cpp  day2window.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Resources/: christmas_poem.txt  recipes_list.json
Resources/LizardStuffs/: lizard_cool_facts.txt
Resources/PhotosOfPrettyPlaces/: pretty_places_descriptions.txt
build-ChristmasCountdown_V1-Desktop_Qt_6_6_0_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-ChristmasCountdown_V1-Desktop_Qt_6_6_0_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-ChristmasCountdown_V1-Desktop_Qt_6_6_0_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-ChristmasCountdown_V1-Desktop_Qt_6_6_0_GCC_64bit-Debug/ChristmasCountdown_V1_autogen/: deps  mocs_compilation.cpp
build-ChristmasCountdown_V1-Desktop_Qt_6_6_0_GCC_64bit-Debug/ChristmasCountdown_V1_autogen/EWIEGA46WW/: moc_day10window.cpp  moc_day10window.cpp.d  moc_day11window.cpp.d  moc_day12window.cpp.d  moc_day1window.cpp  moc_day1window.cpp.d  moc_day2window.cpp.d  moc_day3window.cpp.d  moc_day4window.cpp  moc_day4window.cpp.d  moc_day5window.cpp  moc_day5window.cpp.d  moc_day6window.cpp.d  moc_day7window.cpp  moc_day7window.cpp.d  moc_day8window.cpp.d  moc_day9window.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-ChristmasCountdown_V1-Desktop_Qt_6_6_0_GCC_64bit-Debug/ChristmasCountdown_V1_autogen/include/: ui_day10window.h  ui_day12window.h  ui_day1window.h  ui_day5window.h  ui_day6window.h  ui_day7window.h  ui_day8window.h  ui_mainwindow.h
build-ChristmasCountdown_V1-Desktop_Qt_6_6_0_GCC_64bit-MinSizeRel/: .ninja_deps  .ninja_log  CMakeCache.txt  ChristmasCountdown_V1  build.ninja  cmake_install.cmake
build-ChristmasCountdown_V1-Desktop_Qt_6_6_0_GCC_64bit-MinSizeRel/.qt/: QtDeploySupport.cmake
build-ChristmasCountdown_V1-Desktop_Qt_6_6_0_GCC_64bit-MinSizeRel/.qtc_clangd/: compile_commands.json
build-ChristmasCountdown_V1-Desktop_Qt_6_6_0_GCC_64bit-MinSizeRel/ChristmasCountdown_V1_autogen/: deps  mocs_compilation.cpp
build-ChristmasCountdown_V1-Desktop_Qt_6_6_0_GCC_64bit-MinSizeRel/ChristmasCountdown_V1_autogen/EWIEGA46WW/: moc_day10window.cpp.d  moc_day11window.cpp  moc_day11window.cpp.d  moc_day12window.cpp  moc_day12window.cpp.d  moc_day1window.cpp.d  moc_day2window.cpp  (+12 more)
build-ChristmasCountdown_V1-Desktop_Qt_6_6_0_GCC_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  ChristmasCountdown_V1  build.ninja  cmake_install.cmake
build-ChristmasCountdown_V1-Desktop_Qt_6_6_0_GCC_64bit-Release/.qt/: QtDeploySupport.cmake
build-ChristmasCountdown_V1-Desktop_Qt_6_6_0_GCC_64bit-Release/.qtc_clangd/: compile_commands.json
build-ChristmasCountdown_V1-Desktop_Qt_6_6_0_GCC_64bit-Release/ChristmasCountdown_V1_autogen/: deps
(+1067 files in other folders)
